--- a/web_scraping/css/custom.css
+++ b/web_scraping/css/custom.css
@@ -9,6 +9,10 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 
+#logo-evento {
+  max-width: 250px;
+}
+
 .img-fl {
   width: auto;
   height: 140px;
